--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+            	<groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-surefire-plugin</artifactId>
+            	<version>3.0.0-M5</version>
+            	<configuration>
+                	<!-- Configuración adicional si es necesario -->
+            	</configuration>
+        	</plugin>
 		</plugins>
 	</build>
 
