--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -31,3 +31,30 @@ jobs:
           echo "No test results found. Failing the build."
           exit 1
         fi
+        
+  merge:
+    needs: tests
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.event_name != 'pull_request' && github.ref == 'refs/heads/main' && success()
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+      
+    - name: Install GitHub CLI
+      run: |
+        sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-key C99B11DEB97541F0
+        sudo apt-add-repository https://cli.github.com/packages
+        sudo apt-get update
+        sudo apt-get install gh
+
+    - name: Set up Git
+      run: |
+        git config --global user.email "actions@github.com"
+        git config --global user.name "GitHub Actions"
+
+    - name: Create Pull Request
+      run: |
+        git checkout -b auto-merge-branch
+        git push origin auto-merge-branch
+        gh pr create --base develop --head auto-merge-branch --title "Auto Merge to Develop" --body "Auto-generated pull request from successful tests."
